<resources>
    <string name="app_name">ReportsGo</string>
    <string name="TWITTER_CONSUMER_KEY">yqBSSKlAUm2bETW0T1xn6tcMt</string>
    <string name="TWITTER_CONSUMER_SECRET">IiqWBNzpyXLDTo9Ii37vJaF2qODfOiqyostEMdP87F8RWvKW1Q</string>
    <string name="facebook_app_id">415445955694509</string>
    <string name="fb_login_protocol_scheme">fb415445955694509</string>
    <string name="msg_process">Procesando…</string>
    <string name="lbl_login">Iniciar sesión</string>
    <string name="lbl_logout">Cerrar sesión</string>
    <string name="lbl_sign_up">Crear cuenta</string>
    <string name="btn_continue_facebook">Continua con Facebook</string>
    <string name="btn_continue_google">Continua con Google</string>
    <string name="btn_continue_twitter">Continua con Twitter</string>
    <string name="lbl_password">Ingresa contraseña</string>
    <string name="lbl_forgot_password">Olvidé mi contraseña</string>
    <string name="lbl_or_account">Ó</string>
    <string name="lbl_select_social_network">Inicia con una red social</string>
    <string name="lbl_remember_user">Recordar usuario</string>
    <string name="title_msg_error_sistema">Error.</string>
    <string name="msg_error_sistema">Ocurrio un problema, intenta más tarde.</string>
    <string name="msg_zero_elements">No se encontraron pagos de este cliente.</string>
    <string name="msg_zero_clients">No se encontraron clientes.</string>
    <string name="msg_zero_products">No se encontraron productos.</string>
    <string name="msg_camera_scan">Escanea el código QR o de barras.</string>
    <string name="Titulo_cerrar_sesion">Cerrar sesión </string>
    <string name="lbl_menu_option_client">Clientes</string>
    <string name="lbl_menu_option_products">Productos</string>
    <string name="lbl_menu_option_sell">Ventas</string>
    <string name="lbl_menu_option_order">Pedidos</string>
    <string name="lbl_menu_option_activity">Finanzas</string>
    <string name="lbl_menu_option">¿Qué vas a hacer hoy?</string>
    <string name="lbl_menu_option_sell_subtitle">Genera ventas con clientes y genera tickets.</string>
    <string name="lbl_menu_option_order_subtitle">Crea pedidos relacionados a tus clientes y productos.</string>
    <string name="lbl_menu_option_activity_subtitle">Revisa las ganancias generadas por dia o por un rango de fechas.</string>
    <string name="lbl_menu_option_client_subttitle">Lleva el control de tus clientes.</string>
    <string name="lbl_menu_option_products_subtitle">Crea un inventario de productos y administrarlo de manera sencilla.</string>
    <string name="msg_search_client">Buscando clientes</string>
    <string name="lbl_search_client">Buscar cliente</string>
    <string name="lbl_search_clients">Buscando cliente</string>
    <string name="lbl_search_products">Buscando producto</string>
    <string name="lbl_add_client">Crear nuevo cliente</string>
    <string name="lbl_detail_client">Detalle de cliente</string>
    <string name="lbl_detail_name_client">%s - %s</string>
    <string name="btn_conatctos">contactos</string>
    <string name="btn_modify">Modificar</string>
    <string name="btn_sale">vender</string>
    <string name="btn_detail">Información</string>
    <string name="lbl_client_name">Nombre</string>
    <string name="lbl_client_name_hint"></string>
    <string name="lbl_client_lastname">Apellido</string>
    <string name="lbl_client_lastname_hint">Perez</string>
    <string name="lbl_client_detail">Información del cliente.</string>
    <string name="lbl_client_detail_hint">El dueño de la farmacia.</string>
    <string name="lbl_client_phone">Celular</string>
    <string name="lbl_client_phone_hint">000-000-0000</string>
    <string name="lbl_client_limit">Límite de crédito</string>
    <string name="lbl_client_limit_hint">$0,0</string>
    <string name="lbl_date_client">Cliente desde el  %s</string>
    <string name="lbl_amount_client">Debe:</string>
    <string name="lbl_client_amount">Monto</string>
    <string name="lbl_client_amount_hint">$0,0</string>
    <string name="lbl_client_concept_hint">Abono</string>
    <string name="lbl_client_concept">Concepto</string>
    <string name="btn_generate_order">GENERAR PEDIDO</string>
    <string name="btn_generate_ticket">Abrir venta</string>
    <string name="btn_detail_payments">Detalle de pagos</string>
    <string name="lbl_modify_client">Modificar cliente</string>
    <string name="msg_name_empty">Ingresa un nombre</string>
    <string name="msg_amount_empty">Ingresa un monto</string>
    <string name="msg_client_save">Guardando información del cliente</string>
    <string name="msg_client_created">Cliente agregado</string>
    <string name="msg_client_detail_created">Detalle del cliente actualizado</string>
    <string name="msg_client_delete">Cliente eliminado</string>
    <string name="msg_client_modify">Cliente modificado</string>
    <string name="txt_client_concept_payment">Abono normal</string>
    <string name="txt_client_without_concept_payment">Sin concepto</string>
    <string name="txt_client_amount_format">$ %s</string>
    <string name="txt_client_amount_format_plus">+ $ %s</string>
    <string name="txt_client_amount_format_minum">- $ %s</string>
    <string name="txt_client_date_format">Cliente desde %s</string>
    <string name="txt_client_name_format"> %s %s</string>
    <string name="txt_client_name_format1"> %s</string>
    <string name="txt_client_limit_format">Limite de credito %s</string>
    <string name="txt_client_amount_empty">0.0</string>
    <string name="lbl_change_client">Cambiar cliente</string>
    <string name="lbl_change_product">Cambiar producto</string>
    <string name="lbl_body_message_detail_client">Usted debe: $%s</string>
    <string name="lbl_subject_message_detail_client">Estado de cuenta de %s %s</string>
    <string name="txt_debt_client">Debe: $ %s</string>
    <string name="txt_credit_limit_client">MXN %s</string>
    <string name="msg_search_product">Buscando productos</string>
    <string name="msg_search_products">Buscando producto</string>
    <string name="lbl_search_product">Buscar producto</string>
    <string name="lbl_add_product">Crear nuevo producto</string>
    <string name="lbl_product_name">Nombre</string>
    <string name="lbl_product_name_hint">Nombre del producto</string>
    <string name="lbl_product_description">Descripción</string>
    <string name="lbl_product_description_hint">Describe las características del producto</string>
    <string name="lbl_product_type">Tipo</string>
    <string name="lbl_bar_and_qr_code">CÓDIGO NO DETECTADO</string>
    <string name="msg_save_image">Guardando imagen</string>
    <string name="lbl_product_type_hint">Hombre</string>
    <string name="lbl_product_price_buy">Precio compra</string>
    <string name="lbl_product_stock">Cantidad de producto en tu inventario</string>
    <string name="lbl_product_stock_hint">2</string>
    <string name="lbl_product_price_buy_hint">$100</string>
    <string name="lbl_product_price_sale">Precio venta</string>
    <string name="lbl_product_price_sale_hint">$200</string>
    <string name="lbl_product_code_hint">Código</string>
    <string name="msg_permissions_title">Solicitud de permisos</string>
    <string name="msg_permissions_camera_body">Necesitamos acceder a la cámara del dispositivo, para poder hacer más intuitivo el uso de la aplicación.</string>
    <string name="msg_permissions_galler_body">Necesitamos acceder a tu galería, para poder hacer más intuitivo el uso de la aplicación.</string>
    <string name="lbl_select_image_title">Elige una imagen para tu producto</string>
    <string name="lbl_select_dialog_title">Selecciona una talla</string>
    <string name="lbl_select_product_type_empty">Ninguno</string>
    <string name="lbl_select_product_type_child">Niño</string>
    <string name="lbl_select_product_type_girl">Niña</string>
    <string name="lbl_select_product_type_man">Hombre</string>
    <string name="lbl_select_product_type_woman">Mujer</string>
    <string name="lbl_select_product_size_ch">Chico</string>
    <string name="lbl_select_product_size_me">Mediano</string>
    <string name="lbl_select_product_size_gra">Grande</string>
    <string name="lbl_select_product_size_ex">Extra</string>
    <string name="msg_alert_same_price_title">Mismo monto</string>
    <string name="msg_alert_same_price_body">¿Realmente deseas agregar este producto con el precio de compra igual al precio de venta ?</string>
    <string name="toolbar_scan">Escanear producto</string>
    <string name="lbl_select_product_size_2">2</string>
    <string name="lbl_select_product_size_4">4</string>
    <string name="lbl_select_product_size_6">6</string>
    <string name="lbl_select_product_size_8">8</string>
    <string name="lbl_select_product_size_10">10</string>
    <string name="lbl_select_product_size_12">12</string>
    <string name="lbl_select_product_size_14">14</string>
    <string name="lbl_select_product_size_16">16</string>
    <string name="lbl_select_product_size_28">28</string>
    <string name="lbl_select_product_size_30">30</string>
    <string name="lbl_select_product_size_32">32</string>
    <string name="lbl_select_product_size_34">34</string>
    <string name="lbl_select_product_size_36">36</string>
    <string name="lbl_select_product_size_38">38</string>
    <string name="lbl_select_product_size_40">40</string>
    <string name="lbl_select_product_size_42">42</string>
    <string name="lbl_select_product_size_44">44</string>
    <string name="msg_error_empty_product_name">Falta nombre del producto</string>
    <string name="msg_error_empty_type_name">Falta tipo del producto</string>
    <string name="msg_error_empty_price_buy">Falta precio compra</string>
    <string name="msg_error_empty_price_sale">Falta precio venta</string>
    <string name="msg_error_empty_code">Falta código venta</string>
    <string name="msg_error_empty_inputs">Falta campos obligatorios</string>
    <string name="msg_error_empty_img_url">Falta imagen o pasó algo al guardarla.\nIntenta mas tarde</string>
    <string name="msg_success_product">Producto agregado</string>
    <string name="msg_save_product">Guardando información del producto</string>
    <string name="msg_product_modify_success">Producto modificado</string>
    <string name="msg_product_remove_success">Producto eliminado</string>
    <string name="lbl_modify_product">Detalle del producto</string>
    <string name="lbl_stock_product">%s en existencia</string>
    <string name="lbl_stock_product_exist">Ya agregaste este producto</string>
    <string name="lbl_stock_product_empty">No hay productos en tu inventario.\nCambia el valor de cantidad</string>
    <string name="EtxtOther_product">Especificaciones del producto</string>
    <string name="TxtOther_product">Otro ...</string>
    <string name="ChkBx_ropa">Ropa</string>
    <string name="ChkBx_otro">Otro</string>
    <string name="ChkBx_dulces">Dulces</string>
    <string name="TxtTipo_de_producto">Mercancia</string>
    <string name="Etxtcantidad">Cantidad en peso o paquetes</string>
    <string name="TxtCantidad">Cantidad</string>
    <string name="TxtTipo_de_empaque">Tipo de empaquetado</string>
    <string name="EtxtTipo_de_empaque">(Bolsa con xx kilos , Caja con xx pzs)</string>
    <string name="lbl_generate_sale">Ventas</string>
    <string name="msg_generate_sale">Generando ticket</string>
    <string name="lbl_title_create_order_size">Talla</string>
    <string name="lbl_title_create_order_size_hint">Que talla</string>
    <string name="lbl_title_create_order_color">Color(es)</string>
    <string name="lbl_title_create_order_color_hint">Que color</string>
    <string name="lbl_title_create_order_gender">Género</string>
    <string name="lbl_title_create_order_gender_hint">Para que género</string>
    <string name="lbl_size_number">Numérica</string>
    <string name="btn_delete">Eliminar</string>
    <string name="btn_save">Guardar</string>
</resources>