<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background_view"
        tools:context=".view.mainAcitivityView.MainActivityViewClass">

        <View
            android:layout_width="130dp"
            android:layout_height="match_parent"
            android:background="@color/colorPrimaryTransparent" />

        <com.epacheco.reports.tools.customView.ToolbarGlobal
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:imageProfile="@drawable/icon_person"
            app:toolbarTitle="@string/lbl_menu_option" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/appBarLayout">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.epacheco.reports.tools.customView.ButtonMenu
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="goClientsActivity"
                    app:image="@drawable/ic_vector_clients"
                    app:subTitle="@string/lbl_menu_option_client_subttitle"
                    app:title="@string/lbl_menu_option_client" />

                <com.epacheco.reports.tools.customView.ButtonMenu
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="goSaleActivity"
                    app:image="@drawable/ic_vector_sale"
                    app:subTitle="@string/lbl_menu_option_sell_subtitle"
                    app:title="@string/lbl_menu_option_sell" />

                <com.epacheco.reports.tools.customView.ButtonMenu
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="goProductsActivity"
                    app:image="@drawable/ic_vector_cart"
                    app:subTitle="@string/lbl_menu_option_products_subtitle"
                    app:title="@string/lbl_menu_option_products" />

                <com.epacheco.reports.tools.customView.ButtonMenu
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="goOrderActivity"
                    app:image="@drawable/ic_vector_order"
                    app:subTitle="@string/lbl_menu_option_order_subtitle"
                    app:title="@string/lbl_menu_option_order" />
                <com.epacheco.reports.tools.customView.ButtonMenu
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="goFinanceActivity"
                    app:image="@drawable/ic_vector_activity"
                    app:subTitle="@string/lbl_menu_option_activity_subtitle"
                    app:title="@string/lbl_menu_option_activity" />
            </LinearLayout>
        </ScrollView>
    </RelativeLayout>

</layout>