<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    card_view:cardCornerRadius="10dp"
    card_view:cardElevation="10dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    <RelativeLayout
        android:id="@+id/RelativeLayout_container_size"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">
        <LinearLayout
            android:id="@+id/LinearLayout_container_size"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1"
            >
            <TextView
                android:id="@+id/lbl_order_size"
                style="@style/TextView_Text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".5"
                android:text="@string/lbl_title_create_order_size"/>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".5"
                android:gravity="end">


                <androidx.appcompat.widget.AppCompatCheckBox
                    android:id="@+id/AppCompatCheckBox_numeric"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/lbl_size_number"
                    android:theme="@style/checkBoxStyle"/>
            </LinearLayout>
        </LinearLayout>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/txt_order_size"
            style="@style/Edittext_custom_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:layout_below="@+id/LinearLayout_container_size"
            android:focusable="false"
            android:onClick="createSelectedSizeDialog"
            android:hint="@string/lbl_title_create_order_size_hint"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/RelativeLayout_container_color"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">
        <TextView
            android:id="@+id/lbl_order_color"
            style="@style/TextView_Text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lbl_title_create_order_color"/>
        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/txt_order_color"
            style="@style/Edittext_custom_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:layout_below="@+id/lbl_order_color"
            android:hint="@string/lbl_title_create_order_color_hint"/>
    </RelativeLayout>

        <RelativeLayout
            android:id="@+id/RelativeLayout_container_gender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">
            <TextView
                android:id="@+id/lbl_order_gender"
                style="@style/TextView_Text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lbl_title_create_order_gender"/>
            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/txt_order_gender"
                style="@style/Edittext_custom_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:layout_below="@+id/lbl_order_gender"
                android:focusable="false"
                android:onClick="createSelectedDialog"
                android:hint="@string/lbl_title_create_order_gender_hint"/>
        </RelativeLayout>

    </LinearLayout>
</androidx.cardview.widget.CardView>