<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
  xmlns:android="http://schemas.android.com/apk/res/android">
  <androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".ScrollingActivity">

    <com.google.android.material.appbar.AppBarLayout
      android:id="@+id/appBarLayout"
      android:layout_width="match_parent"
      android:layout_height="?attr/actionBarSize">
      <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
          android:id="@+id/containers_buttons"
          android:layout_width="wrap_content"
          android:layout_height="match_parent"
          android:layout_alignParentEnd="true">

          <Button
            android:id="@+id/btn_add_product"
            style="@style/AppTheme.ButtonGralTransparentInverse"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/btn_save"
            android:visibility="visible"
            android:onClick="createNewProduct"/>
          <Button
            android:id="@+id/btn_modify_product"
            style="@style/AppTheme.ButtonGralTransparentInverse"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/btn_sale"
            android:visibility="gone"
            android:onClick="saleProduct"
            />

        </RelativeLayout>


        <androidx.appcompat.widget.Toolbar
          android:id="@+id/app_bar"
          android:layout_width="wrap_content"
          android:layout_height="match_parent"
          android:layout_alignParentStart="true"
          android:layout_toStartOf="@+id/containers_buttons"
          android:theme="@style/AppThemeSearchView"
          app:title="@string/lbl_add_product">
        </androidx.appcompat.widget.Toolbar>
      </RelativeLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      app:layout_behavior="@string/appbar_scrolling_view_behavior">
    <androidx.coordinatorlayout.widget.CoordinatorLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content">


      <ProgressBar
        android:id="@+id/progress_uploadProduct"
        style="?android:attr/progressBarStyleHorizontal"
        android:indeterminateOnly="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/appBarLayout"
        android:layout_marginTop="-5dp"
        android:visibility="gone"
        android:theme="@style/AppTheme.ProgressBar"/>

      <ImageView
        android:id="@+id/img_product"
        android:layout_width="206dp"
        android:layout_height="198dp"
        android:layout_margin="10dp"
        android:layout_gravity="center_horizontal"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/ic_vector_image"/>


      <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="220dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp">

        <RelativeLayout
          android:id="@+id/container_name"
          android:layout_width="match_parent"
          android:layout_height="wrap_content">
          <TextView
            android:id="@+id/lbl_product_name"
            style="@style/TextView_Text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lbl_product_name"/>
          <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/txt_product_name"
            style="@style/Edittext_custom_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/lbl_product_name"
            android:hint="@string/lbl_product_name_hint"/>
        </RelativeLayout>

        <RelativeLayout
          android:id="@+id/container_description"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_below="@+id/container_name">
          <TextView
            android:id="@+id/lbl_product_description"
            style="@style/TextView_Text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lbl_product_description"/>
          <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/txt_product_description"
            style="@style/Edittext_custom_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/lbl_product_description"
            android:hint="@string/lbl_product_description_hint"
            android:inputType="textCapWords|textMultiLine"
            android:lines="3"/>
        </RelativeLayout>
        <LinearLayout
          android:id="@+id/container_type"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_below="@+id/container_description"
          android:weightSum="1">
          <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".5">
            <TextView
              android:id="@+id/lbl_product_price_buy"
              style="@style/TextView_Text"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_marginStart="0dp"
              android:layout_alignParentStart="true"
              android:text="@string/lbl_product_price_buy"/>
            <androidx.appcompat.widget.AppCompatEditText
              android:id="@+id/txt_product_price_buy"
              style="@style/Edittext_custom_text"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_below="@+id/lbl_product_price_buy"
              android:hint="@string/lbl_product_price_buy_hint"
              android:inputType="numberDecimal"/>
          </RelativeLayout>
          <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".5">
            <TextView
              android:id="@+id/lbl_product_price_sale"
              style="@style/TextView_Text"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:text="@string/lbl_product_price_sale"/>
            <androidx.appcompat.widget.AppCompatEditText
              android:id="@+id/txt_product_price_sale"
              style="@style/Edittext_custom_text"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_below="@+id/lbl_product_price_sale"
              android:hint="@string/lbl_product_price_sale_hint"
              android:inputType="numberDecimal"/>
          </RelativeLayout>



        </LinearLayout>



        <LinearLayout
          android:id="@+id/container_stock"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_below="@+id/container_type"
          android:weightSum="1">
          <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".5">
            <TextView
              android:id="@+id/lbl_product_type"
              style="@style/TextView_Text"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:text="@string/lbl_product_type"/>
            <androidx.appcompat.widget.AppCompatEditText
              android:id="@+id/txt_product_type"
              style="@style/Edittext_custom_text"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_below="@+id/lbl_product_type"
              android:focusable="false"
              android:onClick="createSelectedDialog"
              android:drawableEnd="@drawable/ic_vector_arrow_down"
              android:hint="@string/lbl_product_type_hint"/>
          </RelativeLayout>

          <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".5">
            <TextView
              android:id="@+id/lbl_product_stock"
              style="@style/TextView_Text"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_marginStart="0dp"
              android:layout_alignParentStart="true"
              android:text="@string/lbl_product_stock"/>
            <androidx.appcompat.widget.AppCompatEditText
              android:id="@+id/txt_product_stock"
              style="@style/Edittext_custom_text"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_below="@+id/lbl_product_stock"
              android:hint="@string/lbl_product_stock_hint"
              android:inputType="number"/>
          </RelativeLayout>


        </LinearLayout>
        <LinearLayout
          android:id="@+id/container_code"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_below="@+id/container_stock"
          android:weightSum="1"
          android:gravity="center">
          <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/txt_product_code"
            style="@style/Edittext_custom"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".8"
            android:hint="@string/lbl_product_code_hint"
            android:inputType="number"/>

          <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".2"
            app:layout_anchor="@id/img_product"
            app:layout_anchorGravity="bottom|end"
            app:srcCompat="@drawable/ic_vector_bar_code_scanner_red"
            android:layout_margin="10dp"
            android:onClick="openQRorBarCode"
            app:backgroundTint="@color/colorWhite"/>
       </LinearLayout>

        <LinearLayout
          android:id="@+id/container_modify"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="horizontal"
          android:layout_below="@+id/container_code"
          android:visibility="gone"
          android:weightSum="1">
          <Button
            android:id="@+id/btn_delete_accoount"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            style="@style/AppTheme.ButtonGralBlack"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:text="@string/btn_delete"
            android:onClick="removeProduct"/>
          <Button
            android:id="@+id/btn_modify_accoount"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            style="@style/AppTheme.ButtonGral"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:text="@string/btn_modify"
            android:onClick="modifyProduct"/>
        </LinearLayout>
        <Button
          android:id="@+id/btn_create_product"
          style="@style/AppTheme.ButtonGral"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="20dp"
          android:layout_marginBottom="10dp"
          android:layout_marginStart="20dp"
          android:layout_marginEnd="20dp"
          android:layout_below="@+id/container_code"
          android:onClick="createNewProduct"
          android:text="@string/btn_save"
         />

      </RelativeLayout>


      <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:layout_anchor="@id/img_product"
        app:layout_anchorGravity="bottom|end"
        app:srcCompat="@drawable/ic_vector_add_photo"
        android:onClick="selectImage"
        app:backgroundTint="@color/colorPrimary"/>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
    </ScrollView>

  </androidx.coordinatorlayout.widget.CoordinatorLayout>




</layout>